another link to hill climb video

--- a/actdocs/static/villars_things_todo.html
+++ b/actdocs/static/villars_things_todo.html
@@ -1,6 +1,6 @@
 [% WRAPPER ui title = "Things to do in and around Villars" %]
 
-<p>The weekend of the Swiss Perl Workshop coincides with the Ollon-Villars <a href="http://www.ollon-villars.com/">Historic Hill Climb</a>, which takes place on the 26/27 August. If you're still in Villars on the 27th you can watch some people driving up the mountain really fast in really old motors. Once you've caught the bus up to Villars you'll understand why this is <a href="https://www.youtube.com/watch?v=98mW5PJyPkc">a bit bonkers</a>. This event only happens once every 4 years.</p>
+<p>The weekend of the Swiss Perl Workshop coincides with the Ollon-Villars <a href="http://www.ollon-villars.com/">Historic Hill Climb</a>, which takes place on the 26/27 August. If you're still in Villars on the 27th you can watch some people driving up the mountain really fast in really old motors. Once you've caught the bus up to Villars you'll understand why this is <a href="https://www.youtube.com/watch?v=98mW5PJyPkc">a bit</a> <a href="https://www.youtube.com/watch?v=CsHfusUA23M">bonkers</a>. This event only happens once every 4 years.</p>
 
 <p>You can pick up the Free Access Card for 10 CHF (a day, 50 CHF for the season), which will give you access to the train and telecabine taking you up to Bretaye at 1,800m. There you have access to hiking and biking trails, or you could just visit one of the restaurants <a href="https://villars.roundshot.com/bretaye/">near the lake</a>.</p>
 
