bit more info on things to do and getting to Villars

--- a/actdocs/static/villars_getting_to.html
+++ b/actdocs/static/villars_getting_to.html
@@ -54,6 +54,13 @@ timing, then give Lee a call (send us an <a href="javascript:linkTo_UnCryptMailt
 instead of Aigle. You then get the Regio to Villars-sur-Ollon. There is no real advantage to doing this
 as it takes a little bit longer and doesn't run any later than the last bus.</p>
 
+<p><strong>Renting a Car at Geneva Airport</strong></p>
+
+<p>If you are more than one then this might be a good idea as it will save you on the cost of train + bus tickets. 
+The ideal way to do this is to go into the French sector in Geneva airport - head to departures on the first
+floor then towards the end of the airport, you can then go into the French sector and car hire desks can be 
+found there.</p>
+
 <p><strong>By Train From Zurich Airport (Then Train/Bus)</strong></p>
 
 <p>This is a bit more involved, you really want to fly to Geneva Airport if possible. Anyway, it goes like
