--- a/actdocs/static/villars_things_todo.html
+++ b/actdocs/static/villars_things_todo.html
@@ -6,6 +6,10 @@
 
 <p>In the village itself there are several restaurants, art galleries, shops, and spots to just stop and take in the views. Villars also has a recently rebuilt swimming pool with spa and sauna, ice skating rink, bowling alley, tennis courts, and plenty of routes to hike and bike - there are places where you can rent bicycles. Check out the <a href="http://www.villars-diablerets.ch/">official site</a> for more information.</p>
 
+<p><strong>Glacier 3000</strong></p>
+
+<p>If you have transport then <a href="http://www.glacier3000.ch/en">Glacier 3000</a> is a short 30min drive over the Col de la Croix from Villars. There are two cable cars at Glacier 3000 to take you up to the highest point in the canton of Vaud, featuring a peak walk for those not afraid of heights. You can hike out (or be driven) to Refuge l'Espace at Quille de Diable. Highly recommended, on a clear day you will get a full panoramic view of The Alps, and have no problem seeing the Matterhorn and Mont Blanc.</p>
+
 <p><strong>Going a bit farther</strong></p>
 
 <p>You could visit the <a href="http://www.seldesalpes.ch/en/salt-mines/">Salt Mines</a> in Bex, or one of the many wine cellars in <a href="http://www.chateauaigle.ch/en/vineyard/cellar_visits_wine_tasting_sales">Aigle</a>. It's easy to spend a couple of hours at the <a href="http://www.chillon.ch/en">Chateau de Chillon</a> then head on to <a href="http://www.myswitzerland.com/en-ch/montreux.html">Montreux</a> or <a href="http://www.myswitzerland.com/en-ch/vevey.html">Vevey</a>, you can even take a boat trip out onto the lake. These locations are all within a short bus/train ride from Villars, and on the way to/from Geneva. If you stop by Lausanne there are plenty of museums and galleries, including the <a href="https://www.olympic.org/museum">Olympic Museum</a>.</p>
