changed all dates from 2015 to 2017 and corrected the workshop dates added the basic information of this years venue added sponsor oetiker added sponsor perl career linked the the created static docs about villars-sur-ollon   getting there   hotel / accommodation   what to do removed old files about hackathon and courses

--- a/actdocs/static/index.html
+++ b/actdocs/static/index.html
@@ -4,30 +4,26 @@
 Welcome to the third Swiss Perl Workshop.
 </p>
 
-<p>Date: Friday, 28. August 2015 and Saturday, 29. August 2015<br />
-Venue: <a href="[% make_uri('venue.html') %]">Flörli Olten</a><br />
+<p>Date: Friday, 25. August 2017 and Saturday, 26. August 2017<br />
+Venue: <a href="[% make_uri('venue.html') %]">Hotel du Golf & Spa in Villars-sur-Ollon</a><br />
 Language: English
-</p>
-
-<p><a href="[% make_uri('hackathon.html') %]">Hackathon</a>: Thursday, 27. August 2015 till Saturday, 29. August 2015</p>
-
-<p>
-Help us to advertise the workshop in your company: <a href="[% make_uri_info('images', 'flyer-spw-2015.pdf') %]">Download the flyer as PDF</a>
-</p>
-
-<p>
-Workshop times: The <a href="[% make_uri('schedule') %]">schedule</a> is online.
-</p>
-
-<p>
-If you take pictures, please share them with us: <a href="[% make_uri('wiki?node=ShareEverything') %]">ShareEverything</a> or directly on <a href="https://moas.mhochzwei.net/oc/index.php/s/41HE1ilfMOcSA3Z"> upload directory</a>.
 </p>
 
 <!--
 <p>
-<a href="[% make_uri('course.html') %]">Mastering Perl Course</a> with brian d foy<br />
-9.-10. September 2014, <a href="http://www.colab-zurich.ch/">Colab Zürich</a> <br />
-<a href="https://www.kickstarter.com/projects/1422827986/mastering-perl-at-the-swiss-perl-workshop">Kickstarter campaign for registration</a>
+Help us to advertise the workshop in your company: <a href="[% make_uri_info('images', 'flyer-spw-2017.pdf') %]">Download the flyer as PDF</a>
+</p>
+-->
+
+<!--
+<p>
+Workshop times: The <a href="[% make_uri('schedule') %]">schedule</a> is online.
+</p>
+-->
+
+<!--
+<p>
+If you take pictures, please share them with us: <a href="[% make_uri('wiki?node=ShareEverything') %]">ShareEverything</a> or directly on <a href="https://moas.mhochzwei.net/oc/index.php/s/41HE1ilfMOcSA3Z"> upload directory</a>.
 </p>
 -->
 
@@ -37,11 +33,9 @@ Also, because we have rented a house with a few rooms, we are very open to any w
 </p>
 -->
 
-<!--
 <p>
 We are looking for Sponsors. Interested? Have a look at the packages on the <a href="[% make_uri('sponsoring.html') %]">Sponsoring</a> page.
 </p>
--->
 
 
 <p>The workshop will be a great opportunity to:</p>
