--- a/actdocs/static/venue.html
+++ b/actdocs/static/venue.html
@@ -1,16 +1,11 @@
 [% WRAPPER ui title = "The Venue" %]
 
 <p>
-This year we will be in the <a href="http://www.floerli-olten.ch/"> Flörli Olten</a>, again. 
+This year we will be in the <a href="http://www.hoteldugolf.ch/">Hotel du Golf & Spa in Villars-sur-Ollon</a>.
 </p>
 
-<p><iframe width="500" height="500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.ch/maps?safe=off&amp;ie=UTF8&amp;q=fl%C3%B6rli+olten&amp;fb=1&amp;gl=ch&amp;hq=fl%C3%B6rli&amp;hnear=0x4790302c5a456821:0xc0037d99b31f4db1,Olten&amp;cid=9694543319504713066&amp;t=h&amp;ll=47.35105,7.910435&amp;spn=0.007269,0.010707&amp;z=16&amp;output=embed"></iframe><br /><small><a href="https://maps.google.ch/maps?safe=off&amp;ie=UTF8&amp;q=fl%C3%B6rli+olten&amp;fb=1&amp;gl=ch&amp;hq=fl%C3%B6rli&amp;hnear=0x4790302c5a456821:0xc0037d99b31f4db1,Olten&amp;cid=9694543319504713066&amp;t=h&amp;ll=47.35105,7.910435&amp;spn=0.007269,0.010707&amp;z=16&amp;source=embed" style="color:#0000FF;text-align:left">Google maps</a></small>
+<p>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4796.2059609910675!2d7.053406951974317!3d46.29476997901702!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478ebe28a41c7bf7%3A0xb4e1b7fa0f1eb15f!2sHotel+du+Golf+et+Spa!5e1!3m2!1sen!2sch!4v1492963580769" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 </p>
-
-<p>The workshop is in the Salon. Please enter...</p>
-
-<p><iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps?cbp=12,266.59,,0,0.51&amp;layer=c&amp;panoid=m58a_fKPdn8AAAQIt5mcow&amp;cbll=47.349723,7.911376&amp;dg=opt&amp;ie=UTF8&amp;ll=47.349524,7.91153&amp;spn=0.342401,0.969543&amp;t=m&amp;z=11&amp;source=embed&amp;output=svembed"></iframe>
-</p>
-
 
 [% END %]
