added Lee Johnson to the organisers page

--- a/actdocs/static/organisers.html
+++ b/actdocs/static/organisers.html
@@ -11,14 +11,14 @@
 		<span>Roman Baumer</span>
 	</li>
 	<li>
-		<img src="images/matthias.png" alt="Matthias Bloch" />
-		<p>"Perl coder and enthusiastic organiser. The man with the folding bike."</p>
-		<span>Matthias Bloch</span>
-	</li>
-	<li>
 		<img src="images/dirk.png" alt="Dirk Deimeke" />
 		<p>"Sysadmin and Taskwarrior, Community addict"</p>
 		<span>Dirk Deimeke</span>
+	</li>
+	<li>
+		<img src="images/lee.png" alt="Lee Johnson" />
+		<p>"Software developer, CPAN author, conference speaker and passionated photographer."</p>
+		<span>Lee Johnson</span>
 	</li>
 
 </ul>
