fix some of my HTML tag errors

--- a/actdocs/static/villars_getting_to.html
+++ b/actdocs/static/villars_getting_to.html
@@ -12,7 +12,7 @@ Lausanne is pronounced "Low-san"</p>
 <p>Note that Swiss train ticket pricing is eminently sensible, you will pay the same price no matter when
 you buy the ticket or what time of day you take the train.</p>
 
-<p>The bus timetable can be found <a href="http://www.tpc.ch/site/index.php/horaires/horaires-bus/30-horaires/326-aigle-villars-sur-ollon-2017">here</a>.</p">here</a>.</p>
+<p>The bus timetable can be found <a href="http://www.tpc.ch/site/index.php/horaires/horaires-bus/30-horaires/326-aigle-villars-sur-ollon-2017">here</a>.</p>
 
 <p><strong>By Train From Geneva Airport Then Bus From Aigle</strong></p>
 
