--- a/actdocs/static/index.html
+++ b/actdocs/static/index.html
@@ -1,7 +1,7 @@
 [% WRAPPER ui title = global.conference.name %]
 
 <p>
-Welcome to the third Swiss Perl Workshop.
+Welcome to the fourth Swiss Perl Workshop.
 </p>
 
 <p>Date: Friday, 25. August 2017 and Saturday, 26. August 2017<br />
