--- a/actdocs/static/organisers.html
+++ b/actdocs/static/organisers.html
@@ -17,7 +17,7 @@
 	</li>
 	<li>
 		<img src="images/lee.png" alt="Lee Johnson" />
-		<p>"Software developer, CPAN author, conference speaker and passionated photographer."</p>
+		<p>"Software developer, CPAN author, conference speaker and passionate photographer."</p>
 		<span>Lee Johnson</span>
 	</li>
 
