--- a/actdocs/static/villars_getting_to.html
+++ b/actdocs/static/villars_getting_to.html
@@ -20,7 +20,7 @@ you buy the ticket or what time of day you take the train.</p>
 the end of the arrivals area (head left after the arrivals gate then to the end of the airport).</p>
 
 <p>
-	<img width="50%" height="50%" src="images/01_villars_ticket.jpg" alt="Villars Ticket From Geneva" />
+	<img width="50%" src="images/01_villars_ticket.jpg" alt="Villars Ticket From Geneva" />
 </p>
 
 <p>You can purchase tickets in the airport at baggage reclaim, or in the train station. You will need to
@@ -28,7 +28,7 @@ purchase a ticket for Villars-sur-Ollon, via Lausanne &amp; Aigle. Choose 2e cla
 total cost without reduction should be just under 50 CHF (picture 01, I have a half pass hence 24.50).</p>
 
 <p>
-	<img width="50%" height="50%" src="images/02_villars_train_from_airport_to_aigle.jpg" alt="Villars Train From Geneva" />
+	<img width="50%" src="images/02_villars_train_from_airport_to_aigle.jpg" alt="Villars Train From Geneva" />
 </p>
 
 <p>The train leaves from platform 3 and is the InterRegio Direction: Brig (picture 02). You are aiming to
@@ -37,7 +37,7 @@ stop until half way through your journey, but the train will stop there. The tra
 50 mins to get to Lausanne, and then another 30 minutes to get to Aigle.</p>
 
 <p>
-	<img width="50%" height="50%" src="images/03_villars_bus_from_ailge.jpg" alt="Villars Bus From Aigle" />
+	<img width="50%" src="images/03_villars_bus_from_ailge.jpg" alt="Villars Bus From Aigle" />
 </p>
 
 <p>When you arrive at Aigle exit the train station you will see the bus stops on your right, you want
