--- a/actdocs/static/villars_things_todo.html
+++ b/actdocs/static/villars_things_todo.html
@@ -21,7 +21,7 @@ tennis courts, and plenty of routes to hike and bike - there are places where
 you can rent bicycles. Check out the 
 <a href="http://www.villars-diablerets.ch/">official site</a> for more information.</p>
 
-<p><b><u>>Glacier 3000</u></b></p>
+<p><b><u>Glacier 3000</u></b></p>
 
 <p>If you have transport then <a href="http://www.glacier3000.ch/en">Glacier 3000</a> 
 is a short 30min drive over the Col de la Croix from Villars. There are two cable 
@@ -31,7 +31,7 @@ driven) to Refuge l'Espace at Quille de Diable. Highly recommended, on a clear
 day you will get a full panoramic view of The Alps, and have no problem seeing 
 the Matterhorn and Mont Blanc.</p>
 
-<p><b><u>>Going a bit farther</u></b></p>
+<p><b><u>Going a bit farther</u></b></p>
 
 <p>You could visit the <a href="http://www.seldesalpes.ch/en/salt-mines/">Salt Mines</a> 
 in Bex, or one of the many wine cellars in 
