make Villars pages headers consistent with other pages

--- a/actdocs/static/villars_getting_to.html
+++ b/actdocs/static/villars_getting_to.html
@@ -14,7 +14,7 @@ you buy the ticket or what time of day you take the train.</p>
 
 <p>The bus timetable can be found <a href="http://www.tpc.ch/site/index.php/horaires/horaires-bus/30-horaires/326-aigle-villars-sur-ollon-2017">here</a>.</p>
 
-<p><b><u>By Train From Geneva Airport Then Bus From Aigle</u></b></p>
+<p><h3>By Train From Geneva Airport Then Bus From Aigle</h3></p>
 
 <p>If you're not travelling by car this is the easiest route. Geneva Airport train station is located at
 the end of the arrivals area (head left after the arrivals gate then to the end of the airport).</p>
@@ -48,20 +48,20 @@ to be at stop 21 (picture 03). The bus to Villars-sur-Ollon leaves at 5 to the h
 to catch this bus leaves at 19:20. If you manage to miss this due to a late or delayed flight or just bad
 timing, then give Lee a call (send us an <a href="javascript:linkTo_UnCryptMailto('nbjmup;tqxAqfsm.xpsltipq/di');">email</a> to get his number) and he will come and pick you up.</p>
 
-<p><b><u>By Train From Geneva Airport Then Train From Bex</u></b></p>
+<p><h3>By Train From Geneva Airport Then Train From Bex</h3></p>
 
 <p>This is pretty much the same as above, except you stay on the train and get off at the next station, Bex
 instead of Aigle. You then get the Regio to Villars-sur-Ollon. There is no real advantage to doing this
 as it takes a little bit longer and doesn't run any later than the last bus.</p>
 
-<p><b><u>Renting a Car at Geneva Airport</u></b></p>
+<p><h3>Renting a Car at Geneva Airport</h3></p>
 
 <p>If you are more than one then this might be a good idea as it will save you on the cost of train + bus tickets. 
 The ideal way to do this is to go into the French sector in Geneva airport - head to departures on the first
 floor then towards the end of the airport, you can then go into the French sector and car hire desks can be 
 found there.</p>
 
-<p><b><u>By Train From Zurich Airport (Then Train/Bus)</u></b></p>
+<p><h3>By Train From Zurich Airport (Then Train/Bus)</h3></p>
 
 <p>This is a bit more involved, you really want to fly to Geneva Airport if possible. Anyway, it goes like
 this:</p>
@@ -79,7 +79,7 @@ this:</p>
 Zurich Airport is about 17:40 to avoid missing the last bus to Villars. As above, if you do miss the
 last bus then give Lee a call.</p>
 
-<p><b><u>By Car</u></b></p>
+<p><h3>By Car</h3></p>
 
 <p>Program your GPS. Alternatively:</p>
 
