--- a/actdocs/static/cfp.html
+++ b/actdocs/static/cfp.html
@@ -9,7 +9,7 @@ We welcome proposals on any subject related to Perl.
 </p>
 
 <p>
-Please submit your talk proposal by <b>31. July 2017</b> under <a href="[% make_uri('newtalk') %]">New Talk</a>.
+Please submit your talk proposal by <b>July 31st, 2017</b> under <a href="[% make_uri('newtalk') %]">New Talk</a>.
 </p>
 
 <p>
