removed people limitation sentence

--- a/actdocs/static/registration.html
+++ b/actdocs/static/registration.html
@@ -1,16 +1,12 @@
 [% WRAPPER ui title = "Registration Information" %]
 
 <p>
-Please register on the Act conferencing system to enrol for the Swiss Perl Workshop 2017.
+Please register on the Act conferencing system to enrol for the Swiss Perl Workshop.
 </p>
 
 <p>
 Please <a href="[% make_uri('main') %]">log in</a> or <a href="[% make_uri('register') %]">create a new account</a>. 
 </p>
-
-<p><b>
-We have exactly 50 tickets to sell, based on order of the incoming payment.
-</b></p>
 
 <p>
 Please <a href="[% make_uri('purchase') %]"> purchase your conference ticket</a> and make your payment using online banking or by post. Details are on the invoice. 
