--- a/actdocs/static/venue.html
+++ b/actdocs/static/venue.html
@@ -1,7 +1,7 @@
 [% WRAPPER ui title = "The Venue" %]
 
 <p>
-This year we will be in the <a href="http://www.hoteldugolf.ch/">Hotel du Golf & Spa in Villars-sur-Ollon</a>.
+This year we will be in the <a target="_blank" href="http://www.hoteldugolf.ch/">Hotel du Golf & Spa in Villars-sur-Ollon</a>.
 </p>
 
 <div class="google-maps">
