clarify why you would want to rent a car in the French sector

--- a/actdocs/static/villars_getting_to.html
+++ b/actdocs/static/villars_getting_to.html
@@ -57,8 +57,9 @@ as it takes a little bit longer and doesn't run any later than the last bus.</p>
 <p><h3>Renting a Car at Geneva Airport</h3></p>
 
 <p>If you are more than one then this might be a good idea as it will save you on the cost of train + bus tickets. 
-The ideal way to do this is to go into the French sector in Geneva airport - head to departures on the first
-floor then towards the end of the airport, you can then go into the French sector and car hire desks can be 
+The ideal way to do this is to go into the French sector in Geneva airport, as this is significantly cheaper than
+renting a car in the Swiss side of the airport. To do so head to departures on the first floor then towards the
+end of the airport, to your right after you ascend, you can then go into the French sector and car hire desks can be 
 found there.</p>
 
 <p><h3>By Train From Zurich Airport (Then Train/Bus)</h3></p>
