Remy has offered attendees 50CHf a paragliding session

--- a/actdocs/static/villars_things_todo.html
+++ b/actdocs/static/villars_things_todo.html
@@ -21,6 +21,10 @@ tennis courts, and plenty of routes to hike and bike - there are places where
 you can rent bicycles. Check out the 
 <a href="http://www.villars-diablerets.ch/">official site</a> for more information.</p>
 
+<p>If you are feeling adventurous you could try <a href="http://www.vues-aeriennes.ch/projects/">
+paragliding</a>, say you're with the Swiss Perl Workshop and you will get a 50CHF
+discount on the Vol Découverte.</p>
+
 <p><h3>Glacier 3000</h3></p>
 
 <p>If you have transport then <a href="http://www.glacier3000.ch/en">Glacier 3000</a> 
