--- a/actdocs/static/sponsoring.html
+++ b/actdocs/static/sponsoring.html
@@ -13,10 +13,10 @@
 
 <ul class="check-list">
 <li>attendees dinner</li>
-<li>drinks & catering during the event</li>
+<li><strike>drinks & catering during the event</strike></li>
 <li>travel & hotel costs for international visitors</li>
 <li>t-shirts or coffee cups</li>
-<li>conference dinner and beers</li>
+<li><strike>conference dinner and beers</strike></li>
 </ul>
 
 <p>Or you could become a general sponsor. We have three packages:</p>
