adding initial sponsors page

--- a/actdocs/static/sponsors.html
+++ b/actdocs/static/sponsors.html
@@ -25,4 +25,6 @@ GivenGain is the global leader in cloud-based activism. Our platform enables org
 </header>
 <a target="_blank" href="http://www.perl-services.de/"><img src="[% make_uri_info('images', 'perl-services.svg') %]" width="210px" style="background-color: #267389; border-radius: 4px; padding: 6px;" alt="perl services" /></a>
 
+<a target="_blank" href="http://www.booking.com/"><img src="[% make_uri_info('images', 'booking.png') %]" alt="bookging.com" /></a>
+
 [% END %]
