remove duplicate logo

--- a/actdocs/static/sponsors.html
+++ b/actdocs/static/sponsors.html
@@ -7,7 +7,7 @@ We are very happy to have the following sponsors on board. Without them the conf
 <header>
         <h3>GivenGain</h3>
 </header>
-<a target="_blank" href="https://www.givengain.com/"><img src="[% make_uri_info('images', 'givengain.gif') %]" alt="GivenGain" /></a><
+<a target="_blank" href="https://www.givengain.com/"><img src="[% make_uri_info('images', 'givengain.gif') %]" alt="GivenGain" /></a>
 GivenGain is the global leader in cloud-based activism. Our platform enables organisations to run better fundraising operations and increase revenue with tools that allow them to build and manage relationships and win support for the ideas they believe in.
 
 <header>
