--- a/actdocs/static/sponsors.html
+++ b/actdocs/static/sponsors.html
@@ -3,28 +3,37 @@
 <p>
 We are very happy to have the following sponsors on board. Without them the conference wouldn't be possible!
 </p>
+<hr />
 
-<header>
-        <h3>GivenGain</h3>
-</header>
-<a target="_blank" href="https://www.givengain.com/"><img src="[% make_uri_info('images', 'givengain.gif') %]" alt="GivenGain" /></a><
+<a target="_blank" href="https://www.givengain.com/"><img src="[% make_uri_info('images', 'givengain.gif') %]" alt="GivenGain" /></a>
 GivenGain is the global leader in cloud-based activism. Our platform enables organisations to run better fundraising operations and increase revenue with tools that allow them to build and manage relationships and win support for the ideas they believe in.
+<hr />
 
-<header>
-        <h3>Oetiker + Partner AG</h3>
-</header>
 <a target="_blank" href="http://www.oetiker.ch/"><img src="[% make_uri_info('images', 'op-logo-200.png') %]" alt="Oetiker + Partner AG" /></a>
+OETIKER+PARTNER is a Swiss system management and software development company. Employees from O+P are involved in many Open Source Software projects.
+<hr />
 
-<header>
-        <h3>Perl Careers</h3>
-</header>
 <a target="_blank" href="https://perl.careers/"><img src="[% make_uri_info('images', 'perlcareers_200.png') %]" alt="Perl Careers" /></a>
+Perl Careers is a Perl-focused recruitment consultancy, run by a Peter Sergeant, a CPAN contributor with a recruitment background, rather than by a non-technical person. Peter works with clients and candidates in London, the US, and Australia. Perl Careers regularly supports Perl events.
+<hr />
 
-<header>
-        <h3>perl services</h3>
-</header>
 <a target="_blank" href="http://www.perl-services.de/"><img src="[% make_uri_info('images', 'perl-services.svg') %]" width="210px" style="background-color: #267389; border-radius: 4px; padding: 6px;" alt="perl services" /></a>
+Perl Services is the contracting company of Renée Bäcker, a CPAN author (<a target="_blank" href="https://metacpan.org/author/RENEEB">RENEEB</a>) since 2004. Perl Services regularly supports Perl events.
+<hr />
 
 <a target="_blank" href="http://www.booking.com/"><img src="[% make_uri_info('images', 'booking.png') %]" alt="bookging.com" /></a>
+Booking.com is one of the world’s leading e-commerce companies. 
+Each day, over 1,000,000 room nights are reserved on our websites and apps by both leisure and business travelers.
+Truly international, Booking.com is available in more than 42 languages, and offers over 1,000,000 properties in 210+ countries.
+Over 13,000 people all over the world are dedicated to serving Booking.com’s customers, and we love having the opportunity to create an even better experience for them. 
+     
+Our technical culture derives strongly from our strong ties to the Perl community. We appreciate what open source means both for our business and also for internal projects.
+We are looking for Developers, MySQL DBAs, System Administrators, Architects and Designers. 
+Please check out <a target="_blank" href="http://www.workingatbooking.com/technology">www.workingatbooking.com/technology</a> for all possibilities.
+<hr />
+
+<a target="_blank" href="http://www.open.ch/"><img src="[% make_uri_info('images', 'open-systems.png') %]" alt="Open Systems AG" /></a>
+Open Systems focuses on network security application delivery identity management and global connectivity, all integrated by a service management that creates an unmatched client experience.
+
 
 [% END %]
