--- a/actdocs/static/sponsors.html
+++ b/actdocs/static/sponsors.html
@@ -5,23 +5,23 @@ We are very happy to have the following sponsors on board. Without them the conf
 </p>
 <hr />
 
-<a target="_blank" href="https://www.givengain.com/"><img src="[% make_uri_info('images', 'givengain.gif') %]" alt="GivenGain" /></a>
+<a target="_blank" href="https://www.givengain.com/"><img src="[% make_uri_info('images', 'givengain.gif') %]" alt="GivenGain" /></a><br />
 GivenGain is the global leader in cloud-based activism. Our platform enables organisations to run better fundraising operations and increase revenue with tools that allow them to build and manage relationships and win support for the ideas they believe in.
 <hr />
 
-<a target="_blank" href="http://www.oetiker.ch/"><img src="[% make_uri_info('images', 'op-logo-200.png') %]" alt="Oetiker + Partner AG" /></a>
+<a target="_blank" href="http://www.oetiker.ch/"><img src="[% make_uri_info('images', 'op-logo-200.png') %]" alt="Oetiker + Partner AG" /></a><br />
 OETIKER+PARTNER is a Swiss system management and software development company. Employees from O+P are involved in many Open Source Software projects.
 <hr />
 
-<a target="_blank" href="https://perl.careers/"><img src="[% make_uri_info('images', 'perlcareers_200.png') %]" alt="Perl Careers" /></a>
+<a target="_blank" href="https://perl.careers/"><img src="[% make_uri_info('images', 'perlcareers_200.png') %]" alt="Perl Careers" /></a><br />
 Perl Careers is a Perl-focused recruitment consultancy, run by a Peter Sergeant, a CPAN contributor with a recruitment background, rather than by a non-technical person. Peter works with clients and candidates in London, the US, and Australia. Perl Careers regularly supports Perl events.
 <hr />
 
-<a target="_blank" href="http://www.perl-services.de/"><img src="[% make_uri_info('images', 'perl-services.svg') %]" width="210px" style="background-color: #267389; border-radius: 4px; padding: 6px;" alt="perl services" /></a>
+<a target="_blank" href="http://www.perl-services.de/"><img src="[% make_uri_info('images', 'perl-services.svg') %]" width="210px" style="background-color: #267389; border-radius: 4px; padding: 6px;" alt="perl services" /></a><br />
 Perl Services is the contracting company of Renée Bäcker, a CPAN author (<a target="_blank" href="https://metacpan.org/author/RENEEB">RENEEB</a>) since 2004. Perl Services regularly supports Perl events.
 <hr />
 
-<a target="_blank" href="http://www.booking.com/"><img src="[% make_uri_info('images', 'booking.png') %]" alt="bookging.com" /></a>
+<a target="_blank" href="http://www.booking.com/"><img src="[% make_uri_info('images', 'booking.png') %]" alt="bookging.com" /></a><br />
 Booking.com is one of the world’s leading e-commerce companies. 
 Each day, over 1,000,000 room nights are reserved on our websites and apps by both leisure and business travelers.
 Truly international, Booking.com is available in more than 42 languages, and offers over 1,000,000 properties in 210+ countries.
@@ -32,7 +32,7 @@ We are looking for Developers, MySQL DBAs, System Administrators, Architects and
 Please check out <a target="_blank" href="http://www.workingatbooking.com/technology">www.workingatbooking.com/technology</a> for all possibilities.
 <hr />
 
-<a target="_blank" href="http://www.open.ch/"><img src="[% make_uri_info('images', 'open-systems.png') %]" alt="Open Systems AG" /></a>
+<a target="_blank" href="http://www.open.ch/"><img src="[% make_uri_info('images', 'open-systems.png') %]" alt="Open Systems AG" /></a><br />
 Open Systems focuses on network security application delivery identity management and global connectivity, all integrated by a service management that creates an unmatched client experience.
 
 
