--- a/actdocs/static/sponsors.html
+++ b/actdocs/static/sponsors.html
@@ -25,7 +25,7 @@ Perl Services is the contracting company of Renée Bäcker, a CPAN author (<a ta
 <hr />
 <br />
 
-<a target="_blank" href="http://www.booking.com/"><img src="[% make_uri_info('images', 'booking.png') %]" alt="bookging.com" /></a><br />
+<a target="_blank" href="http://www.booking.com/"><img src="[% make_uri_info('images', 'booking.png') %]" alt="booking.com" /></a><br />
 Booking.com is one of the world’s leading e-commerce companies. 
 Each day, over 1,000,000 room nights are reserved on our websites and apps by both leisure and business travelers.
 Truly international, Booking.com is available in more than 42 languages, and offers over 1,000,000 properties in 210+ countries.
