tweak CFP copy to add extra lengths and extend deadline

--- a/actdocs/static/cfp.html
+++ b/actdocs/static/cfp.html
@@ -1,7 +1,7 @@
 [% WRAPPER ui title = "Call for papers" %]
 
 <p>
-Talks are the heart of the workshop. They are usually 20 or 40 minutes long. There may also be lightning talks of 5 minutes.
+Talks are the heart of the workshop. They are usually 20 or 40 minutes long. There may also be lightning talks of 5 minutes, or extended talks of 120 minutes.
 </p>
 
 <p>
@@ -9,7 +9,7 @@ We welcome proposals on any subject related to Perl.
 </p>
 
 <p>
-Please submit your talk proposal by <b>July 31st, 2017</b> under <a href="[% make_uri('newtalk') %]">New Talk</a>.
+Please submit your talk proposal by <b>August 12th, 2017</b> under <a href="[% make_uri('newtalk') %]">New Talk</a>.
 </p>
 
 <p>
