add bolayCo_OK log + copy

--- a/actdocs/static/sponsors.html
+++ b/actdocs/static/sponsors.html
@@ -40,5 +40,11 @@ Please check out <a target="_blank" href="http://www.workingatbooking.com/techno
 <a target="_blank" href="http://www.open.ch/"><img src="[% make_uri_info('images', 'open-systems.png') %]" alt="Open Systems AG" /></a><br />
 Open Systems focuses on network security application delivery identity management and global connectivity, all integrated by a service management that creates an unmatched client experience.
 
+<hr />
+<br />
+<a target="_blank" href="https://www.bolay.co/fr/home/"><img src="[% make_uri_info('images', 'bolayCo_OK.png') %]" alt="bolay.co" /></a><br />
+Bolay.co SA is an Engineering Services Company (SSI). We specialize in the development of high availability and ultra low power electronic and computer systems for the remote measurement and control of sensitive infrastructures.
+
+We offer several innovative systems: easyGateway for remote maintenance, easyPV for monitoring and optimization of production of photovoltaic power plants, easyControl for cold chain traceability and early fire detection, or easyAccess for management Access.
 
 [% END %]
