add Indigo Code Limited logo

--- a/actdocs/static/sponsors.html
+++ b/actdocs/static/sponsors.html
@@ -47,4 +47,9 @@ Bolay.co SA is an Engineering Services Company (SSI). We specialize in the devel
 
 We offer several innovative systems: easyGateway for remote maintenance, easyPV for monitoring and optimization of production of photovoltaic power plants, easyControl for cold chain traceability and early fire detection, or easyAccess for management Access.
 
+<hr />
+<br />
+<img src="[% make_uri_info('images', 'indigocode_logo.jpg') %]" alt="Indigo Code Limited" /><br />
+Indigo Code Limited
+
 [% END %]
